--- a/contact.html
+++ b/contact.html
@@ -12,53 +12,78 @@
 </head>
 
 <body>
-  <!-- HEADER -->
-<header>
+    <!-- HEADER -->
+    <header class="index1">
 
 
-  <!--  NAV BAR -->
-  <nav class="navbar navbar-light bg-faded nav">
-      <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
-          &#9776;
-      </button>
-      <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-          <a class="navbar-brand nav1" href="#">Roviko</a>
-          <ul class="nav navbar-nav nav2">
-              <li class="nav-item active">
-                  <a class="nav-link" href="#">Approach <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Expertise</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Work</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Blog</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
-              </li>
-          </ul>
+        <!--  NAV BAR -->
+        <nav class="navbar navbar-light bg-faded nav">
+            <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar2" aria-controls="exCollapsingNavbar2" aria-expanded="false" aria-label="Toggle navigation">
+                &#9776;
+            </button>
+            <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
+                <a class="navbar-brand nav1" href="#">Roviko</a>
+                <ul class="nav navbar-nav nav2">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Approach <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Expertise</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Work</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+
+    </header>
+    <!-- END HEADER -->
+
+    <section>
+
+        <hr>
+
+        <p>Get in touch.</p>
+
+        <p>We are driven by creating experiences that deliver results
+            <br>for your business and for your consumers.</p>
+
+        <div class="SF">
+
+
+
+            <img src="img/sanfrancisco.jpg" alt="" class="Cimg" />
+
+            <h2 class="CT1">San Francisco</h2>
+
+            <p class="CP1">560 Mission St, San Francisco, CA 94105 (USA)</p>
+
+        </div>
+
+
+      <div class="Turin">
+
+          <img src="img/Turin.jpg" alt="" class="Cimg1" />
+
+          <h2 class="CT2">Turin</h2>
+
+          <p class="CP2">Via Giovanni Giolitti, 41 – 10123 Turin (ITALY)</p>
+
       </div>
-  </nav>
 
-  <hr>
-
-</header>
-<!-- END HEADER -->
-
-<section>
-
-<p>Get in touch.</p>
-
-<p>We are driven by creating experiences that deliver results
-for your business and for your consumers.<p>
-
-</section>
+    </section>
 
     <!-- FOOTER -->
     <footer>
