--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 &#9776;
             </button>
             <div class="collapse navbar-toggleable-xs" id="exCollapsingNavbar2">
-                <a class="navbar-brand nav1" href="#"><img src="img/rokivo.png" alt="logo" />Roviko</a>
+                <a class="navbar-brand nav1" href="#">Roviko</a>
                 <ul class="nav navbar-nav nav2">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Approach <span class="sr-only">(current)</span></a>
